--- a/views/Header/noLogin.ejs
+++ b/views/Header/noLogin.ejs
@@ -1,7 +1,7 @@
 <link rel="stylesheet" type="text/css" href="/public/css/home.css">
 <div class="header-top">
-    <p>
-        <a class="login-btn" href="/Login">Đăng nhập</a>
-        <a class="register-btn" href="/signUp">Đăng ký</a>
-    </p>
+<p>
+    <a class="btn btn-success radius" href="/Login">Đăng nhập</a>
+    <a class="btn btn-warning radius" href="/signUp">Đăng ký</a>
+</p>
 </div>
