update form login

--- a/public/css/forgotPassword.css
+++ b/public/css/forgotPassword.css
@@ -23,7 +23,7 @@
 
 html,
 body {
-    background-image: url('../image/bgLogin.jpg');
+    background-color: #364150!important;
     background-size: cover;
     background-repeat: no-repeat;
     height: 100%;
