--- a/public/css/signUp.css
+++ b/public/css/signUp.css
@@ -1,6 +1,6 @@
 html,
 body {
-    background-image: url('../image/bgLogin.jpg');
+    background-color: #364150!important;
     background-size: cover;
     background-repeat: no-repeat;
     height: 100%;
