fix and refactor verification code (forgot password and sign up)

--- a/public/css/login.css
+++ b/public/css/login.css
@@ -22,6 +22,7 @@ body {
     padding: 50px 10px 30px;
     overflow: hidden;
     position: relative;
+    max-height: 518px;
 }
 
 input[type="checkbox"] {
