fix forgotpassword form

--- a/public/css/forgotPassword.css
+++ b/public/css/forgotPassword.css
@@ -30,8 +30,8 @@ body {
     font-family: 'Numans', sans-serif;
 }
 
-.panel-body {
-    background-color: #A7BED8 !important;
+h2.text-center {
+    color: #4db3a5;
 }
 
 h2,
