--- a/public/css/home.css
+++ b/public/css/home.css
@@ -75,6 +75,11 @@
         line-height: 59px;
     }
     
+    ul.nav.nav-tabs.movie-home>li>a {
+        font-size: 18px;
+        font-weight: 500;
+    }
+    
     .navbar-header ul>li>a {
         font-size: 19px;
     }
