add 404 route, fix verification

--- a/views/auth/forgotPasswordConfirm.ejs
+++ b/views/auth/forgotPasswordConfirm.ejs
@@ -14,6 +14,13 @@
   <title>KHÔI PHỤC MẬT KHẨU</title>
   <link rel="stylesheet" type="text/css" href="../public/css/signUp.css">
 
+  <style>
+    .errors {
+      color: rgb(216, 27, 27);
+      text-align: center;
+      font-size: 18px;
+    }
+  </style>
 
 </head>
 
@@ -26,39 +33,35 @@
           <img src="/public/image/iconForgot.png" class="centerReset">
 
           <h3 style="font-size: 27px !important;">KHÔI PHỤC MẬT KHẨU</h3>
-          <br>
 
-          <% if ( typeof invalidMail !=='undefined' ) { %>
+          <div class="errors">
             <label>
-              <%= invalidMail %>
-            </label><br />
+              <% if ( typeof invalidMail !=='undefined' ) { %>
+                <%= invalidMail %>
+                  <% } %>
+                    <% if ( typeof invalidCode !=='undefined' ) { %>
+                      <%= invalidCode %>
+                        <% } %>
+                          <% if ( typeof invalidPassword !=='undefined' ) { %>
+                            <%= invalidPassword %>
+            </label>
             <% } %>
-              <% if ( typeof invalidCode !=='undefined' ) { %>
-                <label>
-                  <%= invalidCode %>
-                </label><br />
-                <% } %>
-                  <% if ( typeof invalidMail !=='undefined' ) { %>
-                    <label>
-                      <%= invalidPassword %>
-                    </label><br />
-                    <% } %>
+          </div>
+          <br>
+          <input type="email" name="user_Email" class="form-control input-lg" value="<%= user_Email %>"
+            placeholder="Nhập tên tài khoản" required />
 
-                      <input type="email" name="user_Email" class="form-control input-lg" value="<%= user_Email %>"
-                        placeholder="Nhập tên tài khoản" required />
+          <input type="text" name="user_Code" class="form-control input-lg" placeholder="Nhập mã xác thực" required />
 
-                      <input type="text" name="user_Code" class="form-control input-lg" placeholder="Nhập mã xác thực"
-                        required />
+          <input type="password" name="user_Password" id="user_Password" value="" class="form-control input-lg"
+            placeholder="Mật khẩu mới" required />
 
-                      <input type="password" name="user_Password" id="user_Password" value=""
-                        class="form-control input-lg" placeholder="Mật khẩu mới" required />
+          <input type="password" name="user_ConfirmPassword" id="user_ConfirmPassword" value=""
+            class="form-control input-lg" placeholder="Nhập lại mật khẩu" required />
 
-                      <input type="password" name="user_ConfirmPassword" id="user_ConfirmPassword" value=""
-                        class="form-control input-lg" placeholder="Nhập lại mật khẩu" required />
-
-                      <br />
-                      <button class="btn btn-lg btn-primary btn-block signup-btn" type="submit">
-                        Xác nhận</button>
+          <br />
+          <button class="btn btn-lg btn-primary btn-block signup-btn" type="submit">
+            Xác nhận</button>
         </form>
       </div>
     </div>
