--- a/views/404NotFound.ejs
+++ b/views/404NotFound.ejs
@@ -1,9 +1,13 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <title>404 not found</title>
-    </head>
-    <body>
-        <h1>404 </h1>
-    </body>
+
+<head>
+    <title>404 not found</title>
+</head>
+
+<body>
+    <h1>TRANG BẠN TÌM KHÔNG THẤY</h1>
+    <h4><a href="/">Quay lại trang chủ</a></h4>
+</body>
+
 </html>
