--- a/views/auth/login.ejs
+++ b/views/auth/login.ejs
@@ -37,15 +37,18 @@
                             <input type="password" name="txtUserPassword" id="txtUserPassword" class="form-control"
                                 placeholder="Password" required />
                         </div>
-                        <div class="d-flex justify-content-center">
+                        <div class="justify-content-center">
                             <% if ( typeof loginError !=='undefined' ) { %>
                                 <label style="color: #e61515;">
                                     <%= loginError %>
-                                </label><br />
+                                </label>
                                 <% } if(typeof activateError !=='undefined' ){ %>
-                                    <label style="color: #e61515;">
+                                    <p style="color: #e61515;">
                                         <%= activateError %>
-                                    </label><br />
+                                    </p>
+                                    <p>
+                                        <a href="/signup/confirm">Nhấp vào để tiến hành kích hoạt</a>
+                                    </p>
                                     <% } %>
                         </div>
                         <div class="form-actions">
