--- a/public/css/login.css
+++ b/public/css/login.css
@@ -243,8 +243,13 @@ input:focus {
     display: block;
     margin-left: auto;
     margin-right: auto;
-    width: 120px;
+    width: 220px;
     height: 120px;
+}
+
+.container.center.row {
+    height: 60px;
+    margin-top: 30px;
 }
 
 .input-group {
