--- a/views/auth/forgotPassword.ejs
+++ b/views/auth/forgotPassword.ejs
@@ -1,4 +1,4 @@
-<link href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
+<link href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css" />
 <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.0/js/bootstrap.min.js"></script>
 <script src="//code.jquery.com/jquery-1.11.1.min.js"></script>
 
@@ -7,77 +7,83 @@
 <html lang="en">
 
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Quên mật khẩu</title>
-  <link rel="stylesheet" type="text/css" href="/public/css/forgotPassword.css">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <title>Quên mật khẩu</title>
+    <link rel="stylesheet" type="text/css" href="/public/css/forgotPassword.css" />
 </head>
 
 <body>
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
-  <div class="form-gap"></div>
-  <div class="container">
-    <div class="row">
-      <div class="col-md-4 col-md-offset-4">
-        <div class="panel panel-default">
-          <div class="panel-body">
-            <div class="text-center">
-              <img src="/public/image/iconForgot.png" class="center">
-              <h2 class="text-center">Quên mật khẩu?</h2>
-              <p>Nhập email để khôi phục mật khẩu</p>
-
-              <div>
-
-                <div style="color:rgb(221, 32, 32)">
-                  <label>
-                    <% if ( typeof notFoundError !=='undefined' ) { %>
-                      <%= notFoundError %>
-                        <% } if ( typeof activateError !=='undefined' ) { %>
-                          <%= activateError %>
-                            <br>
-                            <a href="/signup/confirm">
-                              Bấm vào đây để kích hoạt
-                            </a>
-                            <% } %>
-                  </label>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css" />
+    <div class="form-gap"></div>
+    <div class="container my-5">
+        <div class="container center row">
+            <div class="">
+                <div class="logo logo--medium">
+                    <a href="/ " class="router-link-active"><img src="/public/image/Logo-Dien-03.png " alt="Một Chút Phim Accounts " class="logo-image" style="width: 200px" /></a>
                 </div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="panel panel-defaul toffset-md-1 offset-lg-2 col-sm-12 col-md-10 col-lg-8">
+                <div class="panel-body">
+                    <div class="text-center">
+                        <h2 class="text-center">Forgot Your Password</h2>
+                        <p style="text-align: left">
+                            You forgot your password? Don't worry! Give us the email which is used to register your Một Chút Phim account. We'll mail you a link to reset your password.
+                        </p>
 
+                        <div>
+                            <div style="color: rgb(221, 32, 32)">
+                                <label>
+                    <% if ( typeof notFoundError !=='undefined' ) { %> <%=
+                    notFoundError %> <% } if ( typeof activateError
+                    !=='undefined' ) { %> <%= activateError %>
+                    <br />
+                    <a href="/signup/confirm "> Bấm vào đây để kích hoạt </a>
+                    <% } %>
+                  </label>
+                            </div>
+                        </div>
 
-
-
-
-
-              </div>
-
-              <div class="panel-body">
-
-                <form id="register-form" role="form" autocomplete="off" class="form" method="post">
-
-                  <div class="form-group">
-                    <div class="input-group">
-                      <span class="input-group-addon radius"><i
-                          class="glyphicon glyphicon-envelope color-blue radius"></i></span>
-                      <input id="email" name="email" placeholder="email" class="form-control radius" type="email">
+                        <div class="panel-body">
+                            <form id="register-form " role="form " autocomplete="off " class="form" method="post ">
+                                <div class="form-group">
+                                    <div class="input-group" style="text-align: left">
+                                        <label for="email " class="el-form-item__label"><i style="color: red">* &nbsp;</i> You email
+                        address</label
+                      >
+                      <input
+                        id="email "
+                        name="email "
+                        placeholder="email "
+                        class="form-control"
+                        type="email "
+                      />
                     </div>
                   </div>
-                  <div class="form-group">
-
-                    <input name="recover-submit" class="btn btn-lg btn-primary btn-block" value="Đặt lại mật khẩu"
-                      type="submit">
+                  <div class="d-flex justify-content-end" style="float: right;">
+                    <input
+                      name="recover-submit "
+                      class="btn btn-lg btn-block"
+                      value="Send me email "
+                      type="submit "
+                    />
                   </div>
 
-                  <input type="hidden" class="hide" name="token" id="token" value="">
-
+                  <input
+                    type="hidden "
+                    class="hide"
+                    name="token "
+                    id="token "
+                    value=" "
+                  />
                 </form>
-
               </div>
             </div>
           </div>
         </div>
-      </div>
     </div>
-  </div>
-</body>
-
+  </body>
 </html>
