update CRUD for film

--- a/views/admin.ejs
+++ b/views/admin.ejs
@@ -23,11 +23,11 @@
     <div id="header_admin">
         <ul style="display: flex; justify-content: space-between;">
             <li><a href="/admin" id="logo">VNCinema</a></li>
-            <li><a href="/admin/update/film/">QUẢN LÝ PHIM</a></li>
-            <li><a href="/admin/update/cinema/">QUẢN LÝ RẠP</a></li>
-            <li><a href="/admin/update/cineplex">QUẢN LÝ CỤM RẠP</a></li>
-            <li><a href="/admin/update/user/">QUẢN LÝ NGƯỜI DÙNG</a></li>
-            <li style="float: right"><a href="/admin/logout/" id="logout">
+            <li><a href="/admin/film">QUẢN LÝ PHIM</a></li>
+            <li><a href="/admin/cinema">QUẢN LÝ RẠP</a></li>
+            <li><a href="/admin/cineplex">QUẢN LÝ CỤM RẠP</a></li>
+            <li><a href="/admin/user">QUẢN LÝ NGƯỜI DÙNG</a></li>
+            <li style="float: right"><a href="/admin/logout" id="logout">
                     Đăng xuất
                 </a></li>
         </ul>
