--- a/public/css/forgotPassword.css
+++ b/public/css/forgotPassword.css
@@ -45,6 +45,14 @@
             margin: 0 auto;
         }
         
+        .logo.logo--medium {
+            text-align: center;
+        }
+        
+        .panel-body {
+            padding: 20px;
+        }
+        
         h2,
         h3 {
             color: white;
@@ -58,6 +66,11 @@
         
         .input-group {
             width: 100%;
+        }
+        
+        .container {
+            width: 1170px;
+            MARGIN: 50px -65PX;
         }
         
         .center {
