--- a/views/auth/forgotPassword.ejs
+++ b/views/auth/forgotPassword.ejs
@@ -19,13 +19,17 @@
     <div class="form-gap"></div>
     <div class="container">
         <div class="row">
-            <div class="col-md-4 col-md-offset-4">
+            <div class="col-md-8 col-md-offset-4">
+                <div class="">
+                    <div class="logo logo--medium">
+                        <a href="/ " class="router-link-active"><img src="/public/image/Logo-Dien-03.png " alt="Một Chút Phim Accounts " class="logo-image" style="width: 200px" /></a>
+                    </div>
+                </div>
                 <div class="panel panel-default">
                     <div class="panel-body">
                         <div class="text-center">
-                            <img src="/public/image/iconForgot.png" class="center">
-                            <h2 class="text-center">Quên mật khẩu?</h2>
-                            <p>Nhập email để khôi phục mật khẩu</p>
+                            <h2 class="text-center">Forgot Your Password</h2>
+                            <p style="text-align: left;">You forgot your password? Don't worry! Give us the email which is used to register your Một Chút Phim account. We'll mail you a link to reset your password.</p>
 
                             <div>
                                 <% if ( typeof notFoundError !=='undefined' ) { %>
@@ -54,15 +58,14 @@
                                 <form id="register-form" role="form" autocomplete="off" class="form" method="post">
 
                                     <div class="form-group">
-                                        <div class="input-group">
-                                            <span class="input-group-addon radius"><i
-                          class="glyphicon glyphicon-envelope color-blue radius"></i></span>
+                                        <div class="input-group" style="text-align: left;">
+                                            <label for="email" class="el-form-item__label" style="text-align: left;"><i style="color: red; font-size: 17px;">* &nbsp;</i>You email address</label>
                                             <input id="email" name="email" placeholder="email" class="form-control radius" type="email">
                                         </div>
                                     </div>
                                     <div class="form-group">
 
-                                        <input name="recover-submit" class="btn btn-lg btn-primary btn-block" value="Đặt lại mật khẩu" type="submit">
+                                        <input name="recover-submit" class="btn btn-lg btn-primary btn-block" value="Send me email" type="submit">
                                     </div>
 
                                     <input type="hidden" class="hide" name="token" id="token" value="">
