--- a/public/css/user/infoUser.css
+++ b/public/css/user/infoUser.css
@@ -1,16 +1,46 @@
-body {
-    background: #F1F3FA;
-}
-
 /* Profile container */
+
 .profile {
     margin: 20px 0;
 }
 
+body.bgInfoUser {
+    background-color: #364150;
+}
+
+h1 {
+    font-size: 42px;
+    font-weight: 600;
+    color: white !important;
+}
+
+
 /* Profile sidebar */
+
 .profile-sidebar {
     padding: 20px 0 10px 0;
     background: #fff;
+}
+
+.radiusInfo {
+    border-radius: 20px;
+    width: 100%;
+    padding: 5px;
+    padding-left: 20px;
+    outline: none;
+}
+
+h1 {
+    font-size: 42px;
+    font-weight: 600;
+    color: white;
+}
+
+.profile-content {
+    padding: 20px;
+    background: #fff;
+    min-height: 460px;
+    font-size: 17px;
 }
 
 .profile-usertitle {
@@ -64,13 +94,13 @@ body {
 
 .profile-usermenu ul li a {
     color: #93a3b5;
-    font-size: 14px;
+    font-size: 17px;
     font-weight: 400;
 }
 
 .profile-usermenu ul li a i {
     margin-right: 8px;
-    font-size: 14px;
+    font-size: 17px;
 }
 
 .profile-usermenu ul li a:hover {
@@ -89,12 +119,13 @@ body {
     margin-left: -2px;
 }
 
+
 /* Profile Content */
+
 .profile-content {
     padding: 20px;
     background: #fff;
     min-height: 460px;
-
 }
 
 #infofull,
@@ -105,7 +136,9 @@ body {
     height: 420px;
 }
 
+
 /*button*/
+
 .btnuser {
     display: inline-block;
     font-weight: 400;
@@ -114,15 +147,16 @@ body {
     background-image: none;
     border: 1px solid transparent;
     padding: 2px 12px;
-    font-size: 14px;
+    font-size: 15px;
     border-radius: 20px;
     color: #000000;
     width: 100px;
+    padding: 6px;
 }
 
 .btnuser:hover {
-    background-color: #90EE90;
     color: #000000;
+    background: #98909073;
 }
 
 a {
@@ -153,17 +187,19 @@ a:link {
     width: 150px;
     height: 40px;
     border-radius: 20px;
-    background-color: #ADD8E6;
+    background-color: white;
     font-weight: bold;
     font-size: 15px;
 }
 
 .btnuser0:hover {
-    background-color: #90EE90;
+    background-color: #cdd0d4;
     color: #000000;
 }
 
+
 /* The Modal (background) */
+
 .modal {
     display: none;
     /* Hidden by default */
@@ -187,7 +223,9 @@ a:link {
     /* Black w/ opacity */
 }
 
+
 /* Modal Content */
+
 .modal-content {
     background-color: #fefefe;
     margin: auto;
@@ -196,7 +234,9 @@ a:link {
     width: 80%;
 }
 
+
 /* The Close Button */
+
 .exit_df {
     color: #000000;
     float: right;
@@ -218,7 +258,8 @@ a:link {
 
 
 /* table top*/
-.table_top table{
+
+.table_top table {
     border-collapse: collapse;
     width: 100%;
     height: 30px;
@@ -226,29 +267,33 @@ a:link {
     background: seashell;
 }
 
-.table_top table th, td {
+.table_top table th,
+td {
     text-align: center;
-    border: #4CAF50 1px solid;
+    border: #364150 1px solid;
 }
 
 .table_top table tr th {
-    background-color: #4CAF50;
+    background-color: #364150;
     color: white;
 }
 
 
 /* table bottom*/
-.table{
+
+.table {
     padding-top: 87px;
 }
-.table table{
+
+.table table {
     border-collapse: collapse;
     width: 100%;
     border: #4CAF50 1px solid;
     background: seashell;
 }
 
-.table table th, td {
+.table table th,
+td {
     text-align: center;
     border: #4CAF50 1px solid;
 }
@@ -258,32 +303,39 @@ a:link {
     color: white;
 }
 
-
 .table table tr td img {
     width: 70px;
     height: 100px;
 }
 
 .modal2 {
-    display: none; /* Hidden by default */
-    position: fixed; /* Stay in place */
-    z-index: 1; /* Sit on top */
+    display: none;
+    /* Hidden by default */
+    position: fixed;
+    /* Stay in place */
+    z-index: 1;
+    /* Sit on top */
     left: 2%;
     top: 10%;
     width: 96%;
     height: 80%;
-    overflow: auto; /* Enable scroll if needed */
-    background-color: rgb(0,0,0); /* Fallback color */
-    background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+    overflow: auto;
+    /* Enable scroll if needed */
+    background-color: rgb(0, 0, 0);
+    /* Fallback color */
+    background-color: rgba(0, 0, 0, 0.4);
+    /* Black w/ opacity */
 }
-.title{
+
+.title {
     position: fixed;
     background: seashell;
     width: 96%;
     font-weight: bold;
     text-align: center;
 }
-.top_title{
+
+.top_title {
     color: black;
     font-size: 40px;
 }
@@ -291,7 +343,8 @@ a:link {
 .modal button:hover {
     opacity: 0.8;
 }
-.cancelbtn{
+
+.cancelbtn {
     position: absolute;
     right: 3%;
     top: 7%;
@@ -302,7 +355,8 @@ a:link {
     color: white;
     border-radius: 10px;
 }
-.cancelbtn:hover{
+
+.cancelbtn:hover {
     padding: 10px 18px;
     background-color: #f44336;
     color: black;
