--- a/views/admin/cineplex.ejs
+++ b/views/admin/cineplex.ejs
@@ -1,94 +1,118 @@
-<% if( cineplex ) { %>
+<div class="container">
     <div id="table">
-    <table>
-        <tr>
-            <th>ID </th>
-            <th>Tên  </th>
-            <th>Địa chỉ </th>
-            <th>Thao tác</th>
-        </tr>
-        <% for(let i = 0 ;i < cineplex.length ; i++) { %>
-            <tr>
-            <td><%= cineplex[i].dataValues.cineplex_ID %></td> 
-            <td><%= cineplex[i].dataValues.cineplex_Name %></td> 
-            <td><%= cineplex[i].dataValues.cineplex_Adress %></td>
-            <td><b id="btn_update_cineplex_<%= cineplex[i].dataValues.cineplex_ID %>">Cật nhập</b>&nbsp;&nbsp;
-            <a href="/admin/delete/cineplex/<%= cineplex[i].dataValues.cineplex_ID %>" onclick="return confirmAction()" >Xóa</a></td>
-            </tr>   
+        <% if( cineplex ) { %>
+            <% if(cineplex.length!=0){ %>
+                <table>
+                    <tr>
+                        <th>STT</th>
+                        <th>Tên </th>
+                        <th>Địa chỉ </th>
+                        <th>Thao tác</th>
+                    </tr>
+                    <% for(let i=0 ;i < cineplex.length ; i++) { %>
+                        <tr>
+                            <td>
+                                <%= i+1 %>
+                            </td>
+                            <td>
+                                <%= cineplex[i].cineplex_Name %>
+                            </td>
+                            <td>
+                                <%= cineplex[i].cineplex_Address %>
+                            </td>
+                            <td>
+                                <b id="btn_update_cineplex_<%= cineplex[i].cineplex_ID %>">
+                                    <i class="fas fa-edit"></i>
+                                </b>
+                                &nbsp;&nbsp;
+                                <a href="/admin/cineplex/delete/<%= cineplex[i].cineplex_ID %>"
+                                    onclick="return confirmAction()">
+                                    <i class="fas fa-trash"></i>
+                                </a>
+                            </td>
+                        </tr>
+                        <% } %>
+                </table>
+                <% }else{ %>
+                    <h1>Hiện tại hệ thống Một Chút Film chưa có cụm rạp nào</h1>
+                    <% } %>
+                        <% } %>
+    </div>
+</div>
+
+<div>
+    <% for(let i=0 ;i < cineplex.length ; i++) { %>
+        <script>
+            $(document).ready(function () {
+                $("#btn_update_cineplex_main_<%= cineplex[i].cineplex_ID %>").hide();
+                $("#btn_update_cineplex_<%= cineplex[i].cineplex_ID %>").click(function () {
+                    $("#btn_update_cineplex_main_<%= cineplex[i].cineplex_ID %>").show();
+                });
+                $("#btn_close_cineplex_1_<%= cineplex[i].cineplex_ID %>").click(function () {
+                    $("#btn_update_cineplex_main_<%= cineplex[i].cineplex_ID %>").hide();
+                });
+                $("#btn_close_cineplex_<%= cineplex[i].cineplex_ID %>").click(function () {
+                    $("#btn_update_cineplex_main_<%= cineplex[i].cineplex_ID %>").hide();
+                });
+
+            });
+        </script>
         <% } %>
-    </table>
-    </div>
-    <div>
-            <% for(let i = 0 ;i < cineplex.length ; i++) { %>
-            <script>
-                    $(document).ready(function(){
-                        $("#btn_update_cineplex_main_<%= cineplex[i].dataValues.cineplex_ID %>").hide();
-                        $("#btn_update_cineplex_<%= cineplex[i].dataValues.cineplex_ID %>").click(function(){
-                            $("#btn_update_cineplex_main_<%= cineplex[i].dataValues.cineplex_ID %>").show();
-                        });
-                        $("#btn_close_cineplex_1_<%= cineplex[i].dataValues.cineplex_ID %>").click(function(){
-                            $("#btn_update_cineplex_main_<%= cineplex[i].dataValues.cineplex_ID %>").hide();
-                        });
-                        $("#btn_close_cineplex_<%= cineplex[i].dataValues.cineplex_ID %>").click(function(){
-                            $("#btn_update_cineplex_main_<%= cineplex[i].dataValues.cineplex_ID %>").hide();
-                        });
-                        
-                    });
-            </script>
-            <% } %>
-    </div>
-    <div>
-        <% for(let i = 0 ;i < cineplex.length ; i++) { %>
-        <div id="btn_update_cineplex_main_<%= cineplex[i].dataValues.cineplex_ID %>" class="modal">
-                <span class="close" title="Close Modal" id="btn_close_cineplex_<%= cineplex[i].dataValues.cineplex_ID %>">
-                            &times;
-                </span>
-                <form class="modal-content animate" action="/admin/update/cineplex/<%=cineplex[i].dataValues.cineplex_ID %>" method="POST" id="btn_update_cineplex">
-                    <div class="container">
-                        <label> Tên :</label>
-                        <input type="text" value="<%= cineplex[i].dataValues.cineplex_Name %>" name="txtCineplexName"/>
-                        <label> Địa chỉ :</label>
-                        <input type="text" value="<%= cineplex[i].dataValues.cineplex_Adress %>" name="txtCineplexAdress"/>
-                        <button type="submit" value="Cap nhat">
-                                Cập nhật
-                        </button>
-                    </div>
-                    <div class="container">
-                        <button type="button" class="cancelbtn" id="btn_close_cineplex_1_<%= cineplex[i].dataValues.cineplex_ID %>">
-                                Cancel 
-                        </button>
-                    </div>
-                </form>
-            </div>
+</div>
+<div>
+    <% for(let i=0 ;i < cineplex.length ; i++) { %>
+        <div id="btn_update_cineplex_main_<%= cineplex[i].cineplex_ID %>" class="modal">
+            <span class="close" title="Close Modal" id="btn_close_cineplex_<%= cineplex[i].cineplex_ID %>">
+                &times;
+            </span>
+
+            <!-- FORM CẬP NHẬT -->
+
+            <form class="modal-content animate" action="/admin/cineplex/update/<%=cineplex[i].cineplex_ID %>"
+                method="POST" id="btn_update_cineplex">
+
+                <div class="container">
+                    <label> Tên cụm rạp:</label>
+                    <input type="text" value="<%= cineplex[i].cineplex_Name %>" name="cineplexName" />
+                    <label> Địa chỉ :</label>
+                    <input type="text" value="<%= cineplex[i].cineplex_Address %>" name="cineplexAddress" />
+                    <button type="submit" value="Cập nhật">
+                        Cập nhật
+                    </button>
+                </div>
+                <div class="container">
+                    <button type="button" class="cancelbtn" id="btn_close_cineplex_1_<%= cineplex[i].cineplex_ID %>">
+                        Cancel
+                    </button>
+                </div>
+            </form>
+        </div>
         <% } %>
-    </div>
+</div>
 
 
 
 
-    <a style="width:auto" class="btn_create" id="btn_create_cineplex">
-            Thêm cụm rạp
-    </a>
-    <div id="create_cineplex" class="modal">
-        <span class="close" title="Close Modal" id="btn_close_cineplex_create">
-            &times;
-        </span>
-        <form action="/admin/create/cineplex/" method="POST" class="modal-content animate">
-            <div class="container">
-                <label>Tên :</label>
-                <input type="text" placeholder="Nhap vao ten " id="cineplex_Name" name="cineplex_Name" required/><br/>
-                <label> Địa Chỉ :</label>
-                <input type="text" placeholder="Nhap vao dia chi" id="cineplex_Adress" name="cineplex_Adress" required/><br/>
-                <button type="submit" value="Thêm vào Film">
-                    Thêm vào cụm rạp
-                </button>
-            </div>
-            <div class="container">
-                <button type="button" class="cancelbtn" id="btn_close_cineplex_create_1">
-                    Cancel 
-                </button>
-            </div>
-        </form>
-    </div>
-<% } %>
+<a style="width:auto" class="btn_create" id="btn_create_cineplex">
+    Thêm cụm rạp
+</a>
+<div id="create_cineplex" class="modal">
+    <span class="close" title="Close Modal" id="btn_close_cineplex_create">
+        &times;
+    </span>
 
+    <!-- FORM THÊM CỤM RẠP -->
+    <form action="/admin/cineplex/create" method="POST" class="modal-content animate">
+        <div class="container">
+            <label>Tên cụm rạp:</label>
+            <input type="text" placeholder="Tên cụm rạp" id="cineplex_Name" name="cineplexName" required /><br />
+            <label> Địa Chỉ :</label>
+            <input type="text" placeholder="Địa chỉ cụm rạp" id="cineplex_Address" name="cineplexAddress"
+                required /><br />
+            <button type="submit" value="Thêm vào danh sách cụm rạp">
+                THÊM
+            </button>
+        </div>
+
+    </form>
+</div>
