--- a/public/css/forgotPassword.css
+++ b/public/css/forgotPassword.css
@@ -1,55 +1,85 @@
-.form-gap {
-    padding-top: 70px;
-}
-
-.btn-block {
-    border: none;
-    display: block;
-    text-align: center;
-    cursor: pointer;
-    text-transform: uppercase;
-    outline: none;
-    overflow: hidden;
-    position: relative;
-    color: #fff;
-    font-weight: 700;
-    font-size: 15px;
-    background-color: #222;
-    padding: 10px 30px;
-    margin: 0 auto;
-    box-shadow: 0 5px 15px rgba(0, 0, 0, 0.20);
-    border-radius: 20px;
-}
-
-html,
-body {
-    background-image: url('../image/bgLogin.jpg');
-    background-size: cover;
-    background-repeat: no-repeat;
-    height: 100%;
-    font-family: 'Numans', sans-serif;
-}
-
-.panel-body {
-    background-color: #A7BED8 !important;
-}
-
-h2,
-h3 {
-    color: white;
-    text-align: center;
-    font-size: 33px;
-}
-
-.center {
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-    margin-top: 15px;
-    width: 100px;
-    height: 100px;
-}
-
-.radius {
-    border-radius: 20px;
-}
+        .form-gap {
+            padding-top: 70px;
+        }
+        
+        .btn-block {
+            border: none;
+            display: block;
+            text-align: center;
+            cursor: pointer;
+            outline: none;
+            overflow: hidden;
+            position: relative;
+            font-size: 15px;
+            padding: 10px 30px;
+            margin: 0 auto;
+            color: #fff;
+            background: #3a8ee6;
+            border-color: #3a8ee6;
+            width: 170px;
+        }
+        
+        .btn-block:hover {
+            color: white;
+            background-color: #a0cfff;
+            border-color: #a0cfff
+        }
+        
+        html,
+        body {
+            background-color: #364150!important;
+            background-size: cover;
+            background-repeat: no-repeat;
+            height: 100%;
+            font-family: 'Numans', sans-serif;
+        }
+        
+        h2.text-center {
+            color: #4db3a5;
+            font-size: 25px;
+            text-align: left;
+        }
+        
+        .panel-default {
+            border-color: #ddd;
+            margin: 0 auto;
+        }
+        
+        .logo.logo--medium {
+            text-align: center;
+        }
+        
+        .panel-body {
+            padding: 20px;
+        }
+        
+        h2,
+        h3 {
+            color: white;
+            text-align: center;
+            font-size: 33px;
+        }
+        
+        .container.center {
+            text-align: center;
+        }
+        
+        .input-group {
+            width: 100%;
+        }
+        
+        .container {
+            width: 1170px;
+            MARGIN: 50px -65PX;
+        }
+        
+        .center {
+            display: block;
+            margin-left: auto;
+            margin-right: auto;
+            margin-top: 15px;
+        }
+        
+        .radius {
+            border-radius: 20px;
+        }
