--- a/public/css/login.css
+++ b/public/css/login.css
@@ -3,7 +3,7 @@
 @import url('https://fonts.googleapis.com/css?family=Numans');
 html,
 body {
-    background-image: url('../image/bgLogin.jpg');
+    background-color: #364150!important;
     background-size: cover;
     background-repeat: no-repeat;
     height: 100%;
@@ -16,11 +16,131 @@ body {
 }
 
 .card {
-    height: 500px;
-    margin-top: auto;
-    margin-bottom: auto;
-    width: 450px;
-    background-color: #A7BED8 !important;
+    background-color: #fff;
+    border-radius: 7px;
+    margin: 40px auto 10px;
+    padding: 50px 10px 30px;
+    overflow: hidden;
+    position: relative;
+    max-height: 512px;
+}
+
+.card-body {
+    max-height: 361px;
+}
+
+input[type="checkbox"] {
+    margin: 10px;
+}
+
+.form-actions {
+    clear: both;
+    border: 0;
+    border-bottom: 1px solid #eee;
+    padding: 25px 30px;
+    margin-left: -30px;
+    margin-right: -30px;
+}
+
+.login-options {
+    margin-top: 30px;
+    margin-bottom: 30px;
+    overflow: hidden;
+}
+
+.login-options h4 {
+    float: left;
+    font-weight: 600;
+    font-size: 15px;
+    color: #7d91aa!important;
+}
+
+.login-options .social-icons {
+    float: right;
+    padding-top: 3px;
+}
+
+.social-icons li {
+    float: left;
+    display: inline;
+    list-style: none;
+    margin-right: 5px;
+    margin-bottom: 5px;
+    text-indent: -9999px;
+}
+
+.social-icons li .facebook {
+    background: url(../img/social/facebook.png) no-repeat;
+}
+
+.social-icons li>a {
+    -webkit-border-radius: 2px;
+    -moz-border-radius: 2px;
+    -ms-border-radius: 2px;
+    -o-border-radius: 2px;
+    border-radius: 2px;
+    width: 28px;
+    height: 28px;
+    display: block;
+    background-position: 0 0;
+    background-repeat: no-repeat;
+    transition: all .3s ease-in-out;
+    -o-transition: all .3s ease-in-out;
+    -ms-transition: all .3s ease-in-out;
+    -moz-transition: all .3s ease-in-out;
+    -webkit-transition: all .3s ease-in-out;
+}
+
+.login-options .social-icons li a {
+    border-radius: 15px!important;
+    -moz-border-radius: 15px!important;
+    -webkit-border-radius: 15px!important;
+}
+
+.social-icon-color {
+    opacity: .7;
+    background-position: 0 -38px!important;
+}
+
+.social-icons li .facebook {
+    background: url(/public/image/facebook.png) no-repeat;
+}
+
+.social-icons li .twitter {
+    background: url(/public/image/twitter.png) no-repeat;
+}
+
+.social-icons li .googleplus {
+    background: url(/public/image/googleplus.png) no-repeat;
+}
+
+.social-icons li .linkedin {
+    background: url(/public/image/linkedin.png) no-repeat;
+}
+
+.create-account {
+    margin: 0 -40px -30px;
+    padding: 15px 0 17px;
+    text-align: center;
+    background-color: #6c7a8d;
+    -webkit-border-radius: 0 0 7px 7px;
+    -moz-border-radius: 0 0 7px 7px;
+    -ms-border-radius: 0 0 7px 7px;
+    -o-border-radius: 0 0 7px 7px;
+    border-radius: 0 0 7px 7px;
+}
+
+.create-account>#register-btn {
+    font-weight: 600;
+    font-size: 14px;
+    color: #c3cedd;
+    text-transform: uppercase;
+    display: inline-block;
+    margin-top: 5px;
+}
+
+.form-actions {
+    font-size: 14px;
 }
 
 .social_icon span {
@@ -34,10 +154,28 @@ body {
     cursor: pointer;
 }
 
-.card-header h3 {
-    color: white;
+h3.form-title.font-green {
+    color: #4db3a5;
     text-align: center;
-    font-size: 33px;
+    font-size: 28px;
+    font-weight: 600!important;
+}
+
+input.btn.green.uppercase {
+    margin-top: 1px;
+    font-weight: 600;
+    padding: 10px 20px!important;
+    color: #FFF;
+    background-color: #32c5d2;
+    border-color: #32c5d2;
+}
+
+input#txtUserEmail,
+input#txtUserPassword {
+    background-color: #dde3ec;
+    height: 43px;
+    color: #8290a3;
+    border: 1px solid #dde3ec;
 }
 
 .social_icon {
@@ -105,8 +243,13 @@ input:focus {
     display: block;
     margin-left: auto;
     margin-right: auto;
-    width: 120px;
+    width: 220px;
     height: 120px;
+}
+
+.container.center.row {
+    height: 60px;
+    margin-top: 30px;
 }
 
 .input-group {
