update findall.js (thêm /update vào tag link href của trang admin để quản lý theo yêu cầu)

--- a/views/admin/filmAll.ejs
+++ b/views/admin/filmAll.ejs
@@ -16,7 +16,10 @@
                         <%= i+1 %>
                     </td>
                     <td>
-                        <a href="/admin/update/film/cinemaTimeShow/<%= filmAll[i].film_ID %>">
+                        <!-- SỬA LẠI ĐƯỜNG LINK LÀ /admin/update/cinemaTimeShow/film/
+                             02:02 AM -- 06/07/2021
+                             VINH ĐẸP TRAI-->
+                        <a href="/admin/update/cinemaTimeShow/film/<%= filmAll[i].film_ID %>">
                             <%= filmAll[i].film_Name %>
                         </a>
                     </td>
