update admin.js (thêm /update vào tag link href của trang admin để quản lý theo yêu cầu)

--- a/views/admin.ejs
+++ b/views/admin.ejs
@@ -24,8 +24,13 @@
         <ul style="display: flex; justify-content: space-between;">
             <li><a href="/admin" id="logo">VNCinema</a></li>
             <li><a href="/admin/film">QUẢN LÝ PHIM</a></li>
+             <!-- SỬA LẠI ĐƯỜNG LINK LÀ /admin/update/cinema
+                  02:02 AM -- 06/07/2021
+                  VINH ĐẸP TRAI-->
             <li><a href="/admin/update/cinema">QUẢN LÝ RẠP</a></li>
+            <!-- Ở ĐÂY CŨNG VẬY -->
             <li><a href="/admin/update/cineplex">QUẢN LÝ CỤM RẠP</a></li>
+            <!-- NHƯ TRÊN -->
             <li><a href="/admin/update/user">QUẢN LÝ NGƯỜI DÙNG</a></li>
             <li style="float: right"><a href="/admin/logout" id="logout">
                     Đăng xuất
